force-app/main/default/objects/Contact/fields/Communication_Prefs__c.field-meta.xml
<CustomField>
    <fullName>Communication_Prefs__c</fullName>
    <label>Communication Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet><restricted>true</restricted><valueSetName>Communication_Preferences</valueSetName></valueSet>
</CustomField>