force-app/main/default/objects/Contact/fields/Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Level__c</fullName>
    <label>Customer Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Level</valueSetName>
    </valueSet>
</CustomField>