force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetName>Gender</valueSetName></valueSet>
</CustomField>