force-app/main/default/objects/Contact/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet><restricted>true</restricted><valueSetName>Interests</valueSetName></valueSet>
</CustomField>