force-app/main/default/objects/Contact/fields/Original_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Date__c</fullName>
    <description>Stores the original subscription date from the legacy system after lead conversion.</description>
    <label>Original Subscription Date</label>
    <type>DateTime</type>
</CustomField>