force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <externalId>true</externalId>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>